<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.HomeWithoutAccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/FastCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <Button
                style="@style/StyleBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:drawableTop="@drawable/icon_homestuff"
                android:text="@string/TextHomeFastCategories1"
                android:textSize="@dimen/Size15" />

            <Button
                style="@style/StyleBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:drawableTop="@drawable/icon_electronic"
                android:text="@string/TextHomeFastCategories2"
                android:textSize="@dimen/Size15" />

            <Button
                style="@style/StyleBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:drawableTop="@drawable/icon_clothing"
                android:text="@string/TextHomeFastCategories3"
                android:textSize="@dimen/Size15" />

            <Button
                style="@style/StyleBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:drawableTop="@drawable/icon_sports"
                android:text="@string/TextHomeFastCategories4"
                android:textSize="@dimen/Size15" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FastCategories"
            android:layout_marginTop="@dimen/Margin10"
            android:layout_marginBottom="@dimen/Margin10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shape_newadded" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/Margin10"
                android:orientation="vertical">

                <TextView
                    style="@style/StyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextHomeLocation"
                    android:textSize="@dimen/Size15" />

                <TextView
                    style="@style/StyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextHomeNewAdded"
                    android:textSize="@dimen/Size18"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerNewAdded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Title"
            android:scrollbars="none">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnAddItemPsv"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:icon="@drawable/icon_additempsv"
            app:iconSize="50dp"
            app:iconTint="@color/ColorPassive"
            app:iconTintMode="multiply" />


    </RelativeLayout>

</FrameLayout>