<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorGazarYellow"
    tools:context=".View.Onboarding1Activity">

    <ImageView
        android:id="@+id/ShapeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@drawable/shape_onbright" />

    <ImageView
        android:id="@+id/ShapeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ShapeRight"
        android:src="@drawable/shape_onbleft" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BreadCrumbs"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_help" />

            <TextView
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margin10"
                android:text="@string/TextOnbSlogan1"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margin30"
                android:src="@drawable/img_onb" />

            <TextView
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margin30"
                android:text="@string/TextOnbSlogan2"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/BtnNext"
        style="@style/StyleIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/Margin15"
        app:icon="@drawable/ic_next" />

    <LinearLayout
        android:id="@+id/BreadCrumbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BtnSkip"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/Margin30">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_breadcrumbact" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Margin10"
            android:src="@drawable/shape_breadcrumbpsv" />

    </LinearLayout>

    <Button
        android:id="@+id/BtnSkip"
        style="@style/StyleButton"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/Margin30"
        android:text="@string/TextOnbBtnSkip" />

</RelativeLayout>